After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709416 - gsmdec: MS GSM playback is broken
gsmdec: MS GSM playback is broken
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.2.0
Other Linux
: Normal normal
: 1.2.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-04 08:47 UTC by Jan-Michael Brummer
Modified: 2013-12-11 13:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Sample file (5.20 KB, audio/x-wav)
2013-10-04 09:05 UTC, Jan-Michael Brummer
Details

Description Jan-Michael Brummer 2013-10-04 08:47:28 UTC
Playing a "WAVE audio, GSM 6.10, mono 8000 Hz playback" file is broken in GStreamer 1.2. It just causes random noise while it is working fine with version 0.10.
Comment 1 Jan-Michael Brummer 2013-10-04 09:05:56 UTC
Created attachment 256451 [details]
Sample file
Comment 2 Sebastian Dröge (slomo) 2013-10-04 09:19:30 UTC
Confirmed, and avplay plays it properly.
Comment 3 Olivier Crête 2013-12-04 21:12:54 UTC
I can reproduce it with GStreamer 1.2.1 from Fedora 20/rpmfusion, but not with the 1.2 git branch or with gist mater, so I assume this will be fixed in 1.2.2. Please test again when 1.2.2 is released.
Comment 4 Tim-Philipp Müller 2013-12-11 13:45:46 UTC
> I can reproduce it with GStreamer 1.2.1 from Fedora 20/rpmfusion, but not with
> the 1.2 git branch or with gist mater, so I assume this will be fixed in 1.2.2.

This was not fixed. What commit between 1.2.1 and 1.2 HEAD might have fixed it?

Please only mark bugs as FIXED if you know what fixed it or at least have a strong suspicion that certain commits are likely to have fixed it. If you don't know what fixed it, mark it as OBSOLETE please.

I'm guessing what happened is that in one (working) environment the libav decoder got picked up by decodebin, while in the other (broken) one gsmdec got picked up.

This fixes it for me:

 commit 621bf0d22e6861e5ef1b2b72f68e6ccfc2dec7ea
 Author: Tim-Philipp Müller <tim@centricular.com>
 Date:   Fri Dec 6 00:22:20 2013 +0000

    gsmdec: fix decoding of audio/ms-gsm variant
    
    Alternates between 33 and 32 byte frames, but must start
    with a 33 byte frame. This has been broken for ages since
    the element was ported to the audio decoder base class.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=709416